# esp_hack

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/apps/: CMakeLists.txt
components/apps/include/apps/: apps_registry.h
components/apps/src/: apps_registry.c  bluetooth_app.c  boot_screen.c  breakout_app.c  craft_app.c  flashka_app.c  home_screen.c  invaders_app.c  keys_app.c  rgb_light_app.c  sd_flash_app.c  settings_app.c  simple_app_screen.c  simple_app_screen.h  sleep_app.c  snake_app.c  tetris_app.c  wifi_app.c  wifi_tools.c  wifi_tools.h
components/apps/src/craft/: craft_engine.h  craft_mobs.c  craft_render.c  craft_world.c
components/core/: CMakeLists.txt
components/core/include/core/: animation.h  app_manager.h  context.h  events.h  input.h  input_dispatcher.h  navigation.h  screen.h  screen_manager.h
components/core/src/: animation.c  app_manager.c  context.c  event_bus.c  input_dispatcher.c  navigation.c  screen_manager.c
components/drivers/: CMakeLists.txt  idf_component.yml
components/drivers/include/drivers/: analog.h  battery.h  board_pins.h  i2c_bus.h  joystick.h  nfc.h  pn532.h  rgb_led.h  (+2 more)
components/drivers/src/: analog.c  battery.c  i2c_bus.c  joystick.c  nfc.c  pn532.c  rgb_led.c  sdcard.c  ssd1306.c
components/system/: CMakeLists.txt
components/system/src/: key_store.c  logger.c  power_manager.c  settings.c  storage.c
components/ui/: CMakeLists.txt
components/ui/src/: ui.c  ui_carousel.c  ui_font5x7.c  ui_menu.c  ui_status_bar.c  ui_widgets.c
main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+12 files in other folders)
